@@ -42,35 +42,12 @@ typedef enum {
 
 typedef struct _YelpURI YelpURI;
 
-typedef int (*YelpURIReaderOpenCallback)  (gpointer       user_data,
-					   GError        *error);
-typedef int (*YelpURIReaderReadCallback)  (gpointer       user_data,
-					   const gchar   *buffer,
-					   gint           len,
-					   GError        *error);
-typedef int (*YelpURIReaderCloseCallback) (gpointer       user_data,
-					   GError        *error);
-typedef struct {
-        YelpURIReaderOpenCallback  open_callback;
-        YelpURIReaderReadCallback  read_callback;
-        YelpURIReaderCloseCallback close_callback;
-        gpointer                   user_data;
-} YelpURIReader;
-
 YelpURI *       yelp_uri_new           (const gchar                 *str_uri);
 gboolean        yelp_uri_exists        (YelpURI                     *uri);
 
 YelpURIType     yelp_uri_get_type      (YelpURI                     *uri);
 const gchar *   yelp_uri_get_path      (YelpURI                     *uri);
 const gchar *   yelp_uri_get_section   (YelpURI                     *uri);
-
-gboolean        yelp_uri_read          (YelpURI                     *uri,
-					YelpURIReader               *reader,
-					GError                     **error);
-
-gboolean        yelp_uri_read_async    (YelpURI                     *uri,
-					YelpURIReader               *reader,
-					GError                     **error);
 
 YelpURI *       yelp_uri_ref           (YelpURI                     *uri);
 void            yelp_uri_unref         (YelpURI                     *uri);
@@ -85,11 +62,5 @@ gboolean        yelp_uri_equal_path    (YelpURI                     *uri1,
 gboolean        yelp_uri_equal_section (YelpURI                     *uri1,
 				        YelpURI                     *uri2);
 gchar *         yelp_uri_to_string     (YelpURI                     *uri);
-
-/* Convenience function for creating a Reader-struct. */
-YelpURIReader * yelp_uri_reader_new    (YelpURIReaderOpenCallback    open_cb,
-					YelpURIReaderReadCallback    read_cb,
-					YelpURIReaderCloseCallback   close_cb,
-					gpointer                     user_data);
 
 #endif /* __YELP_URI_H__ */
